| Summary: | ASTERISK-22246: Asterisk's "T" flag is ignored when used with "r" or "R" flags. (documentation bug) | ||||
| Reporter: | Rusty Newton (rnewton) | Labels: | |||
| Date Opened: | 2013-08-02 17:16:25 | Date Closed: | 2022-04-27 11:38:20 | ||
| Priority: | Trivial | Regression? | |||
| Status: | Closed/Complete | Components: | Core/Logging General | ||
| Versions: | 11.5.0 13.18.4 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Ubuntu 12.04, ubuntu 3.2.0-45-generic #70-Ubuntu SMP Wed May 29 20:12:06 UTC 2013 x86_64 x86_64 x86_64 GNU/Linux GNU bash, version 4.2.25(1)-release (x86_64-pc-linux-gnu) | Attachments: | |||
| Description: | In asterisk.conf, "timestamp=" is not defined.
An example with "asterisk -cTvvvddd" {noformat} [Aug 2 16:54:50] > 0x7f852c02cab0 -- Probation passed - setting RTP source address to 127.0.0.1:5026 [Aug 2 16:54:50] DEBUG[5209][C-00000000]: pbx.c:4633 pbx_extension_helper: Launching 'Queue' [Aug 2 16:54:50] -- Executing [7000@internal:2] Queue("SIP/6004-00000000", "sales") in new stack [Aug 2 16:54:50] DEBUG[5209][C-00000000]: app_queue.c:6957 queue_exec: queue: sales, options: , url: , announce: , timeout: , agi: , macro: , gosub: , rule: , position: {noformat} An example with: 1. asterisk 2. asterisk -rTvvvddd {noformat} > 0x7f961c01a290 -- Probation passed - setting RTP source address to 127.0.0.1:5030 [Aug 2 16:58:03] DEBUG[5450][C-00000000]: pbx.c:4633 pbx_extension_helper: Launching 'Queue' -- Executing [7000@internal:2] Queue("SIP/6004-00000000", "sales") in new stack [Aug 2 16:58:03] DEBUG[5450][C-00000000]: app_queue.c:6957 queue_exec: queue: sales, options: , url: , announce: , timeout: , agi: , macro: , gosub: , rule: , position: {noformat} We should probably change the flag description in man page and "asterisk -h" output to mention you have to enable it when starting Asterisk... this probably applies to other commands as well.. man page: {noformat} -T Add timestamp to all non-command related output going to the console when running with verbose and/or logging to the con‐ sole. {noformat} "asterisk -h": {noformat} -T Display the time in [Mmm dd hh:mm:ss] format for each line of output to the CLI {noformat} | ||||
| Comments: | By: Rusty Newton (rnewton) 2013-08-02 17:23:31.886-0500 There are obviously various flags that will only work when starting Asterisk and not when connecting to a remote console (some more obvious than others). We should find a way to make this clear in the various help texts. By: Friendly Automation (friendly-automation) 2022-04-27 11:38:22.051-0500 Change 18473 merged by Joshua Colp: asterisk.c: Warn of incompatibilities with remote console. [https://gerrit.asterisk.org/c/asterisk/+/18473|https://gerrit.asterisk.org/c/asterisk/+/18473] By: Friendly Automation (friendly-automation) 2022-04-27 11:39:22.553-0500 Change 18474 merged by Joshua Colp: asterisk.c: Warn of incompatibilities with remote console. [https://gerrit.asterisk.org/c/asterisk/+/18474|https://gerrit.asterisk.org/c/asterisk/+/18474] By: Friendly Automation (friendly-automation) 2022-04-27 12:38:25.990-0500 Change 18184 merged by Joshua Colp: asterisk.c: Warn of incompatibilities with remote console. [https://gerrit.asterisk.org/c/asterisk/+/18184|https://gerrit.asterisk.org/c/asterisk/+/18184] By: Friendly Automation (friendly-automation) 2022-04-27 12:39:05.136-0500 Change 18475 merged by Joshua Colp: asterisk.c: Warn of incompatibilities with remote console. [https://gerrit.asterisk.org/c/asterisk/+/18475|https://gerrit.asterisk.org/c/asterisk/+/18475] | ||||